IFLANGParser.cpp

// Generated from IFLANG.g4 by ANTLR 4.13.1


#include "IFLANGListener.h"
#include "IFLANGVisitor.h"

#include "IFLANGParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct IFLANGParserStaticData final {
  IFLANGParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  IFLANGParserStaticData(const IFLANGParserStaticData&) = delete;
  IFLANGParserStaticData(IFLANGParserStaticData&&) = delete;
  IFLANGParserStaticData& operator=(const IFLANGParserStaticData&) = delete;
  IFLANGParserStaticData& operator=(IFLANGParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag iflangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
IFLANGParserStaticData *iflangParserStaticData = nullptr;

void iflangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (iflangParserStaticData != nullptr) {
    return;
  }
#else
  assert(iflangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<IFLANGParserStaticData>(
    std::vector<std::string>{
      "start", "stat", "ifStatement", "expr", "logic"
    },
    std::vector<std::string>{
      "", "'='", "'if'", "'then'", "'else'", "'('", "')'", "'*'", "'/'", 
      "'+'", "'-'", "'>'", "'<'", "'=='", "'!='", "'>='", "'<='"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "MUL", "DIV", "ADD", "SUB", "GT", "LT", 
      "EQ", "NEQ", "GEQ", "LEQ", "ID", "INT", "NEWLINE", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  iflangParserStaticData = staticData.release();
}

}

IFLANGParser::IFLANGParser(TokenStream *input) : IFLANGParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

IFLANGParser::IFLANGParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  IFLANGParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *iflangParserStaticData->atn, iflangParserStaticData->decisionToDFA, iflangParserStaticData->sharedContextCache, options);
}

IFLANGParser::~IFLANGParser() {
  delete _interpreter;
}

const atn::ATN& IFLANGParser::getATN() const {
  return *iflangParserStaticData->atn;
}

std::string IFLANGParser::getGrammarFileName() const {
  return "IFLANG.g4";
}

const std::vector<std::string>& IFLANGParser::getRuleNames() const {
  return iflangParserStaticData->ruleNames;
}

const dfa::Vocabulary& IFLANGParser::getVocabulary() const {
  return iflangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView IFLANGParser::getSerializedATN() const {
  return iflangParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

IFLANGParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t IFLANGParser::StartContext::getRuleIndex() const {
  return IFLANGParser::RuleStart;
}

void IFLANGParser::StartContext::copyFrom(StartContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StatsContext ------------------------------------------------------------------

std::vector<IFLANGParser::StatContext *> IFLANGParser::StatsContext::stat() {
  return getRuleContexts<IFLANGParser::StatContext>();
}

IFLANGParser::StatContext* IFLANGParser::StatsContext::stat(size_t i) {
  return getRuleContext<IFLANGParser::StatContext>(i);
}

IFLANGParser::StatsContext::StatsContext(StartContext *ctx) { copyFrom(ctx); }

void IFLANGParser::StatsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStats(this);
}
void IFLANGParser::StatsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStats(this);
}

std::any IFLANGParser::StatsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitStats(this);
  else
    return visitor->visitChildren(this);
}
IFLANGParser::StartContext* IFLANGParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, IFLANGParser::RuleStart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<IFLANGParser::StatsContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(11); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(10);
      stat();
      setState(13); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 919460) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

IFLANGParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t IFLANGParser::StatContext::getRuleIndex() const {
  return IFLANGParser::RuleStat;
}

void IFLANGParser::StatContext::copyFrom(StatContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BlankContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::BlankContext::NEWLINE() {
  return getToken(IFLANGParser::NEWLINE, 0);
}

IFLANGParser::BlankContext::BlankContext(StatContext *ctx) { copyFrom(ctx); }

void IFLANGParser::BlankContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlank(this);
}
void IFLANGParser::BlankContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlank(this);
}

std::any IFLANGParser::BlankContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitBlank(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfStmtContext ------------------------------------------------------------------

IFLANGParser::IfStatementContext* IFLANGParser::IfStmtContext::ifStatement() {
  return getRuleContext<IFLANGParser::IfStatementContext>(0);
}

IFLANGParser::IfStmtContext::IfStmtContext(StatContext *ctx) { copyFrom(ctx); }

void IFLANGParser::IfStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStmt(this);
}
void IFLANGParser::IfStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStmt(this);
}

std::any IFLANGParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::AssignContext::ID() {
  return getToken(IFLANGParser::ID, 0);
}

IFLANGParser::ExprContext* IFLANGParser::AssignContext::expr() {
  return getRuleContext<IFLANGParser::ExprContext>(0);
}

tree::TerminalNode* IFLANGParser::AssignContext::NEWLINE() {
  return getToken(IFLANGParser::NEWLINE, 0);
}

IFLANGParser::AssignContext::AssignContext(StatContext *ctx) { copyFrom(ctx); }

void IFLANGParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}
void IFLANGParser::AssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign(this);
}

std::any IFLANGParser::AssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitAssign(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintExprContext ------------------------------------------------------------------

IFLANGParser::ExprContext* IFLANGParser::PrintExprContext::expr() {
  return getRuleContext<IFLANGParser::ExprContext>(0);
}

tree::TerminalNode* IFLANGParser::PrintExprContext::NEWLINE() {
  return getToken(IFLANGParser::NEWLINE, 0);
}

IFLANGParser::PrintExprContext::PrintExprContext(StatContext *ctx) { copyFrom(ctx); }

void IFLANGParser::PrintExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintExpr(this);
}
void IFLANGParser::PrintExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintExpr(this);
}

std::any IFLANGParser::PrintExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitPrintExpr(this);
  else
    return visitor->visitChildren(this);
}
IFLANGParser::StatContext* IFLANGParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 2, IFLANGParser::RuleStat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(25);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<IFLANGParser::BlankContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(15);
      match(IFLANGParser::NEWLINE);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<IFLANGParser::PrintExprContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(16);
      expr();
      setState(17);
      match(IFLANGParser::NEWLINE);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<IFLANGParser::AssignContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(19);
      match(IFLANGParser::ID);
      setState(20);
      match(IFLANGParser::T__0);
      setState(21);
      expr();
      setState(22);
      match(IFLANGParser::NEWLINE);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<IFLANGParser::IfStmtContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(24);
      ifStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

IFLANGParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t IFLANGParser::IfStatementContext::getRuleIndex() const {
  return IFLANGParser::RuleIfStatement;
}

void IFLANGParser::IfStatementContext::copyFrom(IfStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IFContext ------------------------------------------------------------------

IFLANGParser::LogicContext* IFLANGParser::IFContext::logic() {
  return getRuleContext<IFLANGParser::LogicContext>(0);
}

std::vector<tree::TerminalNode *> IFLANGParser::IFContext::NEWLINE() {
  return getTokens(IFLANGParser::NEWLINE);
}

tree::TerminalNode* IFLANGParser::IFContext::NEWLINE(size_t i) {
  return getToken(IFLANGParser::NEWLINE, i);
}

std::vector<IFLANGParser::StatContext *> IFLANGParser::IFContext::stat() {
  return getRuleContexts<IFLANGParser::StatContext>();
}

IFLANGParser::StatContext* IFLANGParser::IFContext::stat(size_t i) {
  return getRuleContext<IFLANGParser::StatContext>(i);
}

IFLANGParser::IFContext::IFContext(IfStatementContext *ctx) { copyFrom(ctx); }

void IFLANGParser::IFContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIF(this);
}
void IFLANGParser::IFContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIF(this);
}

std::any IFLANGParser::IFContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitIF(this);
  else
    return visitor->visitChildren(this);
}
IFLANGParser::IfStatementContext* IFLANGParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, IFLANGParser::RuleIfStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<IFLANGParser::IFContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(27);
    match(IFLANGParser::T__1);
    setState(28);
    logic();
    setState(29);
    match(IFLANGParser::T__2);
    setState(30);
    match(IFLANGParser::NEWLINE);
    setState(31);
    stat();
    setState(34);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == IFLANGParser::T__3) {
      setState(32);
      match(IFLANGParser::T__3);
      setState(33);
      stat();
    }
    setState(36);
    match(IFLANGParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

IFLANGParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t IFLANGParser::ExprContext::getRuleIndex() const {
  return IFLANGParser::RuleExpr;
}

void IFLANGParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AddContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::AddContext::ADD() {
  return getToken(IFLANGParser::ADD, 0);
}

std::vector<IFLANGParser::ExprContext *> IFLANGParser::AddContext::expr() {
  return getRuleContexts<IFLANGParser::ExprContext>();
}

IFLANGParser::ExprContext* IFLANGParser::AddContext::expr(size_t i) {
  return getRuleContext<IFLANGParser::ExprContext>(i);
}

IFLANGParser::AddContext::AddContext(ExprContext *ctx) { copyFrom(ctx); }

void IFLANGParser::AddContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAdd(this);
}
void IFLANGParser::AddContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAdd(this);
}

std::any IFLANGParser::AddContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitAdd(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DivContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::DivContext::DIV() {
  return getToken(IFLANGParser::DIV, 0);
}

std::vector<IFLANGParser::ExprContext *> IFLANGParser::DivContext::expr() {
  return getRuleContexts<IFLANGParser::ExprContext>();
}

IFLANGParser::ExprContext* IFLANGParser::DivContext::expr(size_t i) {
  return getRuleContext<IFLANGParser::ExprContext>(i);
}

IFLANGParser::DivContext::DivContext(ExprContext *ctx) { copyFrom(ctx); }

void IFLANGParser::DivContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDiv(this);
}
void IFLANGParser::DivContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDiv(this);
}

std::any IFLANGParser::DivContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitDiv(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SubContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::SubContext::SUB() {
  return getToken(IFLANGParser::SUB, 0);
}

std::vector<IFLANGParser::ExprContext *> IFLANGParser::SubContext::expr() {
  return getRuleContexts<IFLANGParser::ExprContext>();
}

IFLANGParser::ExprContext* IFLANGParser::SubContext::expr(size_t i) {
  return getRuleContext<IFLANGParser::ExprContext>(i);
}

IFLANGParser::SubContext::SubContext(ExprContext *ctx) { copyFrom(ctx); }

void IFLANGParser::SubContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSub(this);
}
void IFLANGParser::SubContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSub(this);
}

std::any IFLANGParser::SubContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitSub(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::MulContext::MUL() {
  return getToken(IFLANGParser::MUL, 0);
}

std::vector<IFLANGParser::ExprContext *> IFLANGParser::MulContext::expr() {
  return getRuleContexts<IFLANGParser::ExprContext>();
}

IFLANGParser::ExprContext* IFLANGParser::MulContext::expr(size_t i) {
  return getRuleContext<IFLANGParser::ExprContext>(i);
}

IFLANGParser::MulContext::MulContext(ExprContext *ctx) { copyFrom(ctx); }

void IFLANGParser::MulContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMul(this);
}
void IFLANGParser::MulContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMul(this);
}

std::any IFLANGParser::MulContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitMul(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParensContext ------------------------------------------------------------------

IFLANGParser::ExprContext* IFLANGParser::ParensContext::expr() {
  return getRuleContext<IFLANGParser::ExprContext>(0);
}

IFLANGParser::ParensContext::ParensContext(ExprContext *ctx) { copyFrom(ctx); }

void IFLANGParser::ParensContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParens(this);
}
void IFLANGParser::ParensContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParens(this);
}

std::any IFLANGParser::ParensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitParens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::IdContext::ID() {
  return getToken(IFLANGParser::ID, 0);
}

IFLANGParser::IdContext::IdContext(ExprContext *ctx) { copyFrom(ctx); }

void IFLANGParser::IdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterId(this);
}
void IFLANGParser::IdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitId(this);
}

std::any IFLANGParser::IdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitId(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::IntContext::INT() {
  return getToken(IFLANGParser::INT, 0);
}

IFLANGParser::IntContext::IntContext(ExprContext *ctx) { copyFrom(ctx); }

void IFLANGParser::IntContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInt(this);
}
void IFLANGParser::IntContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInt(this);
}

std::any IFLANGParser::IntContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitInt(this);
  else
    return visitor->visitChildren(this);
}
IFLANGParser::ExprContext* IFLANGParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 6, IFLANGParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case IFLANGParser::ADD: {
        _localctx = _tracker.createInstance<IFLANGParser::AddContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(38);
        match(IFLANGParser::ADD);
        setState(39);
        expr();
        setState(40);
        expr();
        break;
      }

      case IFLANGParser::SUB: {
        _localctx = _tracker.createInstance<IFLANGParser::SubContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(42);
        match(IFLANGParser::SUB);
        setState(43);
        expr();
        setState(44);
        expr();
        break;
      }

      case IFLANGParser::MUL: {
        _localctx = _tracker.createInstance<IFLANGParser::MulContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(46);
        match(IFLANGParser::MUL);
        setState(47);
        expr();
        setState(48);
        expr();
        break;
      }

      case IFLANGParser::DIV: {
        _localctx = _tracker.createInstance<IFLANGParser::DivContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(50);
        match(IFLANGParser::DIV);
        setState(51);
        expr();
        setState(52);
        expr();
        break;
      }

      case IFLANGParser::INT: {
        _localctx = _tracker.createInstance<IFLANGParser::IntContext>(_localctx);
        enterOuterAlt(_localctx, 5);
        setState(54);
        match(IFLANGParser::INT);
        break;
      }

      case IFLANGParser::ID: {
        _localctx = _tracker.createInstance<IFLANGParser::IdContext>(_localctx);
        enterOuterAlt(_localctx, 6);
        setState(55);
        match(IFLANGParser::ID);
        break;
      }

      case IFLANGParser::T__4: {
        _localctx = _tracker.createInstance<IFLANGParser::ParensContext>(_localctx);
        enterOuterAlt(_localctx, 7);
        setState(56);
        match(IFLANGParser::T__4);
        setState(57);
        expr();
        setState(58);
        match(IFLANGParser::T__5);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicContext ------------------------------------------------------------------

IFLANGParser::LogicContext::LogicContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t IFLANGParser::LogicContext::getRuleIndex() const {
  return IFLANGParser::RuleLogic;
}

void IFLANGParser::LogicContext::copyFrom(LogicContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- GreaterEqualContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::GreaterEqualContext::GEQ() {
  return getToken(IFLANGParser::GEQ, 0);
}

std::vector<IFLANGParser::LogicContext *> IFLANGParser::GreaterEqualContext::logic() {
  return getRuleContexts<IFLANGParser::LogicContext>();
}

IFLANGParser::LogicContext* IFLANGParser::GreaterEqualContext::logic(size_t i) {
  return getRuleContext<IFLANGParser::LogicContext>(i);
}

IFLANGParser::GreaterEqualContext::GreaterEqualContext(LogicContext *ctx) { copyFrom(ctx); }

void IFLANGParser::GreaterEqualContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGreaterEqual(this);
}
void IFLANGParser::GreaterEqualContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGreaterEqual(this);
}

std::any IFLANGParser::GreaterEqualContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitGreaterEqual(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NotEqualContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::NotEqualContext::NEQ() {
  return getToken(IFLANGParser::NEQ, 0);
}

std::vector<IFLANGParser::LogicContext *> IFLANGParser::NotEqualContext::logic() {
  return getRuleContexts<IFLANGParser::LogicContext>();
}

IFLANGParser::LogicContext* IFLANGParser::NotEqualContext::logic(size_t i) {
  return getRuleContext<IFLANGParser::LogicContext>(i);
}

IFLANGParser::NotEqualContext::NotEqualContext(LogicContext *ctx) { copyFrom(ctx); }

void IFLANGParser::NotEqualContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNotEqual(this);
}
void IFLANGParser::NotEqualContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNotEqual(this);
}

std::any IFLANGParser::NotEqualContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitNotEqual(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EqualContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::EqualContext::EQ() {
  return getToken(IFLANGParser::EQ, 0);
}

std::vector<IFLANGParser::LogicContext *> IFLANGParser::EqualContext::logic() {
  return getRuleContexts<IFLANGParser::LogicContext>();
}

IFLANGParser::LogicContext* IFLANGParser::EqualContext::logic(size_t i) {
  return getRuleContext<IFLANGParser::LogicContext>(i);
}

IFLANGParser::EqualContext::EqualContext(LogicContext *ctx) { copyFrom(ctx); }

void IFLANGParser::EqualContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEqual(this);
}
void IFLANGParser::EqualContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IFLANGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEqual(this);
}

std::any IFLANGParser::EqualContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFLANGVisitor*>(visitor))
    return parserVisitor->visitEqual(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntLogicContext ------------------------------------------------------------------

tree::TerminalNode* IFLANGParser::IntLogicContext::INT() {
  return getToken(IFLANGParser::INT, 0);
}
